aptosid-settings-desktop (20241226.3) UNRELEASED; urgency=medium

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 27 Dec 2024 21:23:05 +0100

aptosid-settings-desktop (20241226.2) unstable; urgency=medium

  * aptosid-settings-cinnamon: org.cinnamon.desktop.screensaver no
    longer takes a picture-uri option.
  * aptosid-settings-qt-gtk: supply xdg/Kvantum/kvantum.kvconfig and set
    theme to KvGnomeDark.

 -- Kel Modderman <kelvmod@gmail.com>  Fri, 27 Dec 2024 20:35:41 +1000

aptosid-settings-desktop (20241226.1) unstable; urgency=medium

  * Update mimeapps.list for all desktops and introduce gnome defaults
    for the first time.

 -- Kel Modderman <kelvmod@gmail.com>  Fri, 27 Dec 2024 15:09:00 +1000

aptosid-settings-desktop (20241225.3) unstable; urgency=medium

  * aptosid-settings-xfce: remove defunct lintian-overrides file, we do
    everything with xfconf now.
  * aptosid-settings-mate: new MATE desktop environment settings.

 -- Kel Modderman <kelvmod@gmail.com>  Thu, 26 Dec 2024 21:47:31 +1000

aptosid-settings-desktop (20241225.2) unstable; urgency=medium

  * aptosid-settings-lxqt: add filterClear=true to app menu settings.

 -- Kel Modderman <kelvmod@gmail.com>  Wed, 25 Dec 2024 12:46:13 +1000

aptosid-settings-desktop (20241225.1) unstable; urgency=medium

  * aptosid-settings-budgie: remove icon task list from panel and tweak
    applet order.
  * aptosid-settings-budgie: review budgie-mimeapps.list.

 -- Kel Modderman <kelvmod@gmail.com>  Wed, 25 Dec 2024 11:26:36 +1000

aptosid-settings-desktop (20241224.11) unstable; urgency=medium

  * aptosid-settings-qt-gtk: the adwaita and gtk2 Qt platform themes
    were lacklustre, use qt5-style-kvantum now and qt6-style-kvantum
    when it becomes available.
  * aptosid-settings-qt-gtk: do not activate gtk4 for libreoffice.

 -- Kel Modderman <kelvmod@gmail.com>  Tue, 24 Dec 2024 18:43:47 +1000

aptosid-settings-desktop (20241224.10) unstable; urgency=medium
