@@ -1,0 +1,1 @@
+labwc etc/xdg
