@@ -1,0 +1,3 @@
+XCURSOR_THEME=breeze_cursors
+XCURSOR_SIZE=24
+QT_STYLE_OVERRIDE=kvantum
