@@ -1,0 +1,12 @@
+<labwc_config>
+  <desktops number="2" />
+  <keyboard>
+    <keybind key="W-1"><action name="GoToDesktop" to="1" /></keybind>
+    <keybind key="W-2"><action name="GoToDesktop" to="2" /></keybind>
+    <keybind key="W-q"><action name="Close" /></keybind>
+    <keybind key="A-Tab"><action name="NextWindow" /></keybind>
+    <keybind key="W-Tab"><action name="ToggleMaximize" /></keybind>
+    <keybind key="W-s"><action name="Execute" command="foot" /></keybind>
+    <keybind key="W-a"><action name="Execute" command="fuzzel" /></keybind>
+  </keyboard>
+</labwc_config>
